k8/base/auctioneerd.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auctioneer-01
  labels:
    app: auctioneer
spec:
  serviceName: auctioneer
  replicas: 2
  selector:
    matchLabels:
      app: auctioneer-v1
  template:
    metadata:
      labels:
        app: auctioneer-v1
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      terminationGracePeriodSeconds: 10
      containers:
        - name: auctioneer
          image: textile/auctioneer
          imagePullPolicy: Always
          ports:
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - name: auctioneer-store
              mountPath: /data/auctioneerd
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
      volumes:
        - name: configure-env
          configMap:
            name: configmap-auctioneer
  volumeClaimTemplates:
    - metadata:
        name: auctioneer-store
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
