k8/base/apid.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    app: api-v1
  ports:
    - port: 8889
      name: api
    - port: 9090
      name: metrics
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-01
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-v1
  template:
    metadata:
      labels:
        app: api-v1
    spec:
      serviceAccountName: postgres-cloud-sql
      containers:
        - name: api
          image: textile/api
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 8889
            - name: metrics
              containerPort: 9090
          command: ["./with-postgres.sh", "./apid"]
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: api
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
