k8/base/authd.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
spec:
  selector:
    app: auth-v1
  ports:
    - port: 5000
      name: api
    - port: 9090
      name: metrics
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-01
  labels:
    app: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-v1
  template:
    metadata:
      labels:
        app: auth-v1
    spec:
      serviceAccountName: postgres-cloud-sql
      containers:
        - name: auth
          image: textile/auth
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 5000
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              memory: 100Mi
              cpu: "0.3"
            limits:
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: api
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
