k8/base/brokerd.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker
  labels:
     app: broker
spec:
  selector:
    app: broker-v1
  ports:
    - port: 5000
      name: api
    - port: 9090
      name: metrics
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-01
  labels:
    app: broker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: broker-v1
  template:
    metadata:
      labels:
        app: broker-v1
    spec:
      serviceAccountName: postgres-cloud-sql
      containers:
        - name: broker
          image: textile/broker
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 5000
            - name: metrics
              containerPort: 9090
          command: ["./with-postgres.sh", "./brokerd"]
          resources:
            requests:
              memory: 100Mi
              cpu: "0.5"
            limits:
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: api
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
