k8/base/dealerd.yaml
apiVersion: v1
kind: Service
metadata:
  name: dealer
spec:
  selector:
    app: dealer-v1 # point this to desired deployment
  ports:
    - port: 5000
      name: api
    - port: 9090
      name: metrics
  type: ClusterIP
---
#apiVersion: monitoring.coreos.com/v1
#kind: ServiceMonitor
#metadata:
#  name: dealer
#  labels:
#    app: dealer
#spec:
#  endpoints:
#    - port: metrics
#  selector:
#    matchLabels:
#      app: dealer
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dealer-01
  labels:
    app: dealer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dealer-v1
  template:
    metadata:
      labels:
        app: dealer-v1
    spec:
      containers:
        - name: dealer
          image: textile/dealer
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 5000
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              memory: 100Mi
              cpu: "0.6"
            limits:
              memory: 1Gi
