k8/base/gqld.yaml
apiVersion: v1
kind: Service
metadata:
  name: gql
  labels:
    app: gql
spec:
  selector:
    app: gql-v1
  ports:
    - port: 5000
      name: gql
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gql-01
  labels:
    app: gql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gql-v1
  template:
    metadata:
      labels:
        app: gql-v1
    spec:
      serviceAccountName: postgres-cloud-sql
      containers:
        - name: gql
          image: textile/gql
          imagePullPolicy: Always
          ports:
            - name: gql
              containerPort: 5000
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          # readinessProbe:
          #   tcpSocket:
          #     port: gql
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          #   failureThreshold: 3
          # livenessProbe:
          #   tcpSocket:
          #     port: gql
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
          #   failureThreshold: 3
