k8/base/ipfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs
spec:
  selector:
    app: ipfs
  ports:
    - port: 5001
      name: api
    - port: 4001
      name: swarm
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-swarm
spec:
  selector:
    app: ipfs
  ports:
    - port: 4001
      name: swarm
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ipfs
  labels:
    app: ipfs
spec:
  serviceName: ipfs
  replicas: 1
  selector:
    matchLabels:
      app: ipfs
  template:
    metadata:
      labels:
        app: ipfs
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: ipfs
          image: "ipfs/go-ipfs:v0.8.0"
          command:
            - /usr/local/bin/start_ipfs
          args:
            - daemon
            - "--migrate"
            - "--enable-namesys-pubsub"
          ports:
            - name: api
              containerPort: 5001
          volumeMounts:
            - name: ipfs-store
              mountPath: /data/ipfs
          resources:
            requests:
              memory: 1Gi
              cpu: "2"
            limits:
              memory: 2Gi
  volumeClaimTemplates:
    - metadata:
        name: ipfs-store
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
