k8/base/packerd.yaml
apiVersion: v1
kind: Service
metadata:
  name: packer
  labels:
     app: packer
spec:
  selector:
    app: packer-v1
  ports:
    - port: 9090
      name: metrics
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packer-01
  labels:
    app: packer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: packer-v1
  template:
    metadata:
      labels:
        app: packer-v1
    spec:
      serviceAccountName: cloudsql-objectstorage
      containers:
        - name: packer
          image: textile/packer
          imagePullPolicy: Always
          ports:
            - name: metrics
              containerPort: 9090
          command: ["./with-postgres.sh", "./packerd"]
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
