k8/base/piecer.yaml
apiVersion: v1
kind: Service
metadata:
  name: piecer
  labels:
     app: piecer
spec:
  selector:
    app: piecer-v1
  ports:
    - port: 5000
      name: api
    - port: 9090
      name: metrics
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piecer-01
  labels:
    app: piecer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: piecer-v1
  template:
    metadata:
      labels:
        app: piecer-v1
    spec:
      containers:
        terminationGracePeriodSeconds: 2700 # 45min
        - name: piecer
          image: textile/piecer
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 5000
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              memory: 300Mi
              cpu: "1"
            limits:
              cpu: "2"
              memory: 1Gi 
          readinessProbe:
            tcpSocket:
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: api
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
