k8/base/storaged.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage
  labels:
    app: storage
  annotations:
    cloud.google.com/backend-config: '{"default": "broker-backendconfig"}'
spec:
  selector:
    app: storage-v1
  ports:
    - port: 8888
      name: api
    - port: 9090
      name: metrics
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-01
  labels:
    app: storage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storage-v1
  template:
    metadata:
      labels:
        app: storage-v1
    spec:
      containers:
        - name: storage
          image: textile/storage
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 8888
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            httpGet:
              port: api
          livenessProbe:
            tcpSocket:
              port: api
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
