k8/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: broker-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - http:
        paths:
          - path: /upload
            backend:
              serviceName: storage
              servicePort: 8888
          - path: /storagerequest/*
            backend:
              serviceName: storage
              servicePort: 8888
